--- a/kogpt2_slogan_filtering2.ipynb
+++ b/kogpt2_slogan_filtering2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "source": [
     "#input data 전처리\r\n",
     "from konlpy.tag import Kkma\r\n",
@@ -30,7 +30,7 @@
     "#애드센스 3만원 / \r\n",
     "\r\n",
     "input_sim = 40  # input data 유사성 민감도 지정 / 숫자가 작을수록 관련 없는게 나올 확률이 커짐 / 최소 50이상 설정\r\n",
-    "input_text = 'SUV자동차'\r\n",
+    "input_text = '커피전문기업'\r\n",
     "input_text_list = input_text.split(' ') # input data 띄어쓰기로 나누기\r\n",
     "eng_text = re.sub('[^a-zA-z]',' ',input_text).strip()\r\n",
     "# print(word_tokenize(input_text))\r\n",
@@ -74,7 +74,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "SUV자동차\n"
+      "커피 전문 기업\n"
      ]
     }
    ],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "source": [
     "#슬로건 생성 모델 실행\r\n",
     "import requests\r\n",
@@ -119,104 +119,100 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "What a Super mobility\n",
-      "Beyond the dynamic\n",
-      "당신은 블랙베리의 주인공이다\n",
-      "당신의 차를 사랑합니다\n",
-      "이제 우리들의 일상이 되었습니다\n",
-      "가장 나답게\n",
-      "가속 페달의 힘으로 부드럽게 잡아주세요\n",
-      "나의 미래,  당신의 드라이빙이 옳다\n",
-      "DBRANCE FINDERBE\n",
-      "WITH YOUR BEAUTY\n",
-      "Good Focus\n",
-      "다시 시작하는 나만의 드라이빙\n",
-      "A Good\n",
-      "이제 모든 순간이 좋아지는 시간입니다\n",
-      "마음을 여는 엔진\n",
-      "SMART MATH THE SWEET\n",
-      "이것이 바로 내 차의 미래입니다\n",
-      "나는 내 방식대로 산다\n",
-      "더 이상의 자유만 보장할 수 없습니다. 우리,  그 자유를 위해\n",
-      "BE YOURSELF RESERVI\n",
-      "Future in You!\n",
-      "DO MY WAY GRAND OF ROADY\n",
-      "Never Free Passion\n",
-      "내차 사고도 GM에서 내차 수리\n",
-      "이제 현대\n",
-      "당신처럼 당신의 스타일은 타고나야 하니까\n",
-      "모든 즐거움은 당신의 몫입니다\n",
-      "완성은 완성\n",
-      "오늘의 자동차는 당신의 것이다\n",
-      "모든 순간을 생각하다\n",
-      "당신이 원하던 것\n",
-      "Luxury different\n",
-      "더 나은 미래를 위한 변화의 시작\n",
-      "SUV는 말 그대로 SURE PERFO\n",
-      "Pay of dream\n",
-      "내 차 샀어?\n",
-      "What's Make your shine\n",
-      "대한민국 신용을 지켜주세요\n",
-      "신개념의 자동차부품 도매업\n",
-      "시작이 반이다\n",
-      "세상을 압도하라\n",
-      "새로운 시대의 시작\n",
-      "나만의 길로\n",
-      "더 똑똑해지는 일상에 최적화된\n",
-      " 가장 빠르다\n",
-      "모두가 함께할 때,  미래가 있습니다\n",
-      "세계에서 가장 빠른 퍼포먼스\n",
-      "세상은 지금 DJ가 아니다\n",
-      "시선을 사로잡다\n",
-      "Forever short\n",
-      "이것은 보험의 미래다\n",
-      "Green Life Car\n",
-      "SUV는 SUI가,  SLBM은 SOYS\n",
-      "나를 웃게 만드는 아름다운 추억\n",
-      "Live Your Life\n",
-      "SMART AHC\n",
-      "더 나은 내일에 집중하세요\n",
-      "프리미에 강하다\n",
-      "SUV를 넘어 하이브리드로\n",
-      "이것이 다 이유가 있습니까?\n",
-      "좋은 자동차는 품질이다\n",
-      "모든 순간이 옳은 순간으로\n",
-      "자동차와 함께하는 새로운 방식\n",
-      "GREEN CHEST FINDER\n",
-      "My Future\n",
-      "우리의 기술은 당신의 자동차에 있습니다\n",
-      "Playboys\n",
-      "자동차 스스로,  그 이상의 가능성을 만들다\n",
-      "차라리 현대 SUV를 장착하라\n",
-      "신개념의 파워\n",
-      "당신의 미래를 위해 모든 것을 아끼지 않아야 할 당신입니\n",
-      "나는 당신의 꿈을 키우겠습니다\n",
-      "Good Mind\n",
-      "Life Make your Drivers\n",
-      "From my self,  I'm on\n",
-      "지금은 답이 보인다\n",
-      "BELLERSS\n",
-      "나만의 톡\n",
-      "완벽한,  완벽한 완성\n",
-      "Beyond the Next Mobility\n",
-      "다시 태어나다\n",
-      "TIME CREATIVE\n",
-      "당신은 당신을 기억합니다,  당신의 타이어는 당신의 것이다\n",
-      "My Possible Everything\n",
-      "Life different\n",
-      "나의 인생에 힘이 되고 싶다\n",
-      "모든 순간을 함께하는 즐거움\n",
-      "지금,  가장 쉬운 대출,  가장 빠른 혜택\n",
-      "LIFE HOME PERFORMANGE\n",
-      "가까운 시야 안에서\n",
-      "HOME NIKE STYLE\n",
-      "모든 순간\n",
-      "모터사이클에서 일상을 바꿀 당신의 선택\n",
-      "다시 달리는 자동차의 신기술\n",
-      "당신의 삶도 함께 빛날거예요\n",
-      "새로운 금융의 시작\n",
-      "모든 순간\n",
-      "97 개 완료\n"
+      "인생에서 가장 맛있는 것을 맛보면\n",
+      "이것이 바로 치킨전문 기업\n",
+      "당신의 시간을 더 특별하게\n",
+      "Don't never good\n",
+      "우리는 이\n",
+      "한번도 경험해보지 못한 새로운 인생\n",
+      "마음을 담았습니다\n",
+      "맛있는 식사하세요\n",
+      "어쩌지?\n",
+      "오늘의 커피\n",
+      "맛있는 한끼\n",
+      "나는 매일매일 새로운 라이프\n",
+      "오늘도 맛있는 요리,  내일은 나뿐입니다\n",
+      "맛있다면 언제든 즐겨요\n",
+      "새로운 도전은 계속됩니다\n",
+      "소중한 당신이 당신을 지켜주고 있습니다\n",
+      "나만의 공간에 예술을 더하다\n",
+      "My Face Like Your Skin\n",
+      "모두의 즐거움을 위해\n",
+      "THE MASTER ME,  Live Check\n",
+      "당신의 모든 순간을 위해\n",
+      "세상의 모든 것\n",
+      "더욱 건강하게\n",
+      "이제 우리집도 행복해지는 시대\n",
+      "요리의 기준을 세우다\n",
+      "내 몸에 더 맞는 커피\n",
+      "당신의 오감만족\n",
+      "Daily Morning\n",
+      "진짜 제대로 된 요리가 만나다\n",
+      "어디서나 쉽고 편하게\n",
+      "당신에게\n",
+      "맛있게 오래가고 싶습니다\n",
+      "세상의 모든 카페가 당신 곁을 지켜주겠습니다\n",
+      "한 번 더 도전하는 내일을\n",
+      "진짜 요리사는 요리사가 아니다,  진정한 요리사\n",
+      "내 삶을 바꾸는 맛있는 시간\n",
+      "나의 여행은 지금부터\n",
+      "나만의 시간을 갖다\n",
+      "BE HAVE FULL NEW\n",
+      "이제는,  진짜 피자만 골라야 할 때\n",
+      "아이를 키우는 일은 혼자만의 시간이 아니다\n",
+      "맛도 칼칼하고 맛도 역시 맛집도 음식도 맛있다\n",
+      "당신의 라이프 스타일을 완성하다\n",
+      "당신의 마음을 담았다\n",
+      "당신은 지금 무엇을 하든 지금 행복해요\n",
+      "내 손에서 멈출 수 없는 즐거운 변화\n",
+      "We are the Moment\n",
+      "세상은 지금 달라집니다\n",
+      "우리 가족 행복이 행복한 한 해가 되었으면 하는 바람입니다\n",
+      "맛있는 요리를 만드는 사람들의 지혜\n",
+      "맛있는 한끼\n",
+      "오늘의 나,  오늘의 내가 되는 시간\n",
+      "다시,  나를 위한 좋은 습관,  내가 좋아하는 시간\n",
+      "JUST PORTTHERE STYLE\n",
+      "당신은 당신 안에 있습니다\n",
+      "대한민국 NO.1,  매일매일\n",
+      "오늘은 넥스트라이프에요\n",
+      "우리의 인생도 함께\n",
+      "오늘은 매일 커피하세요\n",
+      "오늘의 시작은 바로\n",
+      "우리가 원하는 커피로 다시 태어나다\n",
+      "세상은 매일 바뀌니까\n",
+      "Design your Life\n",
+      "Yes,  Make I'm on\n",
+      "다 같은 직수.써봐\n",
+      "이제 한섬이 더 강해지다\n",
+      "내일의 행복\n",
+      "오!\n",
+      "다시,  나만의 방식으로 나를 변화시킬 수 있도록\n",
+      "소형가전 땐,  그 이상\n",
+      "모두가 편안한 휴식시간을 만듭니다\n",
+      "우리가 선택한 그 이상의 커피\n",
+      "세상을 이롭게\n",
+      "다르게 만드는 행복\n",
+      "세상에 없던 No.1 커피전문점\n",
+      "다시,  더 맛있다\n",
+      "모두 나를 아는 착한 가게\n",
+      "Shoot Your Life\n",
+      "당신의 첫 번째 인생에 도움을 줍니다\n",
+      "맛있는 한끼의 끝\n",
+      "이것만 하면 된다\n",
+      "이 순간에도\n",
+      "YES OF MEET NOW?\n",
+      "I have the chocolate\n",
+      "마음의 여유를 선물하세요\n",
+      "진짜 요리다\n",
+      "세상의 모든 순간을 함께\n",
+      "대한민국 행복의 시작\n",
+      "아직도 내가 원하는 스타일\n",
+      "아이를 키우는 아빠의 마음 편히\n",
+      "이제 더 강해지는 맛\n",
+      "내 삶을 책임질 모든 솔루션\n",
+      "이 세상에,  그 누구도 생각지 못한 새로운 세상을 만듭니다\n",
+      "93 개 완료\n"
      ]
     }
    ],
@@ -224,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "source": [
     "#차집합 함수\r\n",
     "def differ_sets(a,b) : \r\n",
@@ -237,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "source": [
     "#영어 슬로건 따로 추출\r\n",
     "import re\r\n",
@@ -259,7 +255,64 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "['Save User ALL Wirel', 'Phone Touch Phonic One Mobile', 'Simple', 'Take Live Makes on', 'STAGE FOORR MOSMBERS', 'Phone to Play', 'Live in the Professional', 'GOOD YOU REVERY', 'SKY MY A TO MOMORPG', 'Somewhere IM Mobile']\n"
+      "[\"Don't never good\", 'My Face Like Your Skin', 'THE MASTER ME,  Live Check', 'Daily Morning', 'BE HAVE FULL NEW', 'We are the Moment', 'JUST PORTTHERE STYLE', 'Design your Life', \"Yes,  Make I'm on\", 'Shoot Your Life', 'YES OF MEET NOW?', 'I have the chocolate']\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "source": [
+    "\r\n",
+    "from sentence_transformers import SentenceTransformer, util\r\n",
+    "import numpy as np\r\n",
+    "import random\r\n",
+    "\r\n",
+    "model = SentenceTransformer('distiluse-base-multilingual-cased-v1')\r\n",
+    "\r\n",
+    "corpus = slogan_list\r\n",
+    "\r\n",
+    "corpus_embeddings = model.encode(corpus, convert_to_tensor=True)\r\n",
+    "\r\n",
+    "# Query sentences:\r\n",
+    "queries = random.sample(kor_list, 3)\r\n",
+    "\r\n",
+    "\r\n",
+    "# Find the closest 5 sentences of the corpus for each query sentence based on cosine similarity\r\n",
+    "top_k = 6\r\n",
+    "for query in queries:\r\n",
+    "    query_embedding = model.encode(query, convert_to_tensor=True)\r\n",
+    "    cos_scores = util.pytorch_cos_sim(query_embedding, corpus_embeddings)[0]\r\n",
+    "    cos_scores = cos_scores.cpu()\r\n",
+    "\r\n",
+    "    #We use np.argpartition, to only partially sort the top_k results\r\n",
+    "    top_results = np.argpartition(-cos_scores, range(top_k))[1:top_k]\r\n",
+    "\r\n",
+    "    print(\"\\n======================\\n\")\r\n",
+    "    print(\"Query:\", query)\r\n",
+    "    print(\"\\nTop 5 most similar sentences in corpus:\")\r\n",
+    "\r\n",
+    "    for idx in top_results[0:top_k]:\r\n",
+    "        print(corpus[idx].strip(), \"(Score: %.4f)\" % (cos_scores[idx]))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "\n",
+      "======================\n",
+      "\n",
+      "Query: 오늘도 맛있는 요리,  내일은 나뿐입니다\n",
+      "\n",
+      "Top 5 most similar sentences in corpus:\n",
+      "오늘의 나,  오늘의 내가 되는 시간 (Score: 0.6128)\n",
+      "진짜 제대로 된 요리가 만나다 (Score: 0.4975)\n",
+      "오늘은 매일 커피하세요 (Score: 0.4789)\n",
+      "진짜 요리다 (Score: 0.4715)\n",
+      "맛있는 요리를 만드는 사람들의 지혜 (Score: 0.4600)\n"
      ]
     }
    ],
@@ -484,29 +537,6 @@
      },
      "metadata": {},
      "execution_count": 28
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "source": [
-    "'Hello, 안녕!'.replace('안녕', 'Python')\r\n",
-    "\r\n",
-    "x = '아이폰이 제일 좋아'\r\n",
-    "x.replace('아이폰','')"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "'이 제일 좋아'"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 21
     }
    ],
    "metadata": {}
