english_slogan_test

--- a/eng.ipynb
+++ b/eng.ipynb
@@ -395,16 +395,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 8,
    "source": [
     "import requests\r\n",
     "import json\r\n",
     "from transformers import AutoTokenizer # For Encoding and Decoding \r\n",
     "\r\n",
-    "company = \"ice\" #(최대 10글자)\r\n",
-    "context = \"cream\" #(최대 15글자)\r\n",
-    "\r\n",
-    "input_ = 'apple creative,'\r\n",
+    "input_ = 'apple iphone'\r\n",
     "print(input_)\r\n",
     "\r\n",
     "#preprocess\r\n",
@@ -427,7 +424,8 @@
     "\r\n",
     "#slogan generate\r\n",
     "r = requests.post(\r\n",
-    "    'https://train-2yh9mhbbfwvp1fu3a9mv-gpt2-train-teachable-ainize.endpoint.ainize.ai/predictions/gpt-2-en-medium-finetune', # M 3에포크 애플 슬로건\r\n",
+    "    # 'https://train-2yh9mhbbfwvp1fu3a9mv-gpt2-train-teachable-ainize.endpoint.ainize.ai/predictions/gpt-2-en-medium-finetune', # M 3에포크 애플 슬로건\r\n",
+    "    'https://train-shl4h9fvjomb8xlpykyj-gpt2-train-teachable-ainize.endpoint.ainize.ai/predictions/gpt-2-en-small-finetune', #S 5에포크\r\n",
     "    headers = {'Content-Type' : 'application/json'\r\n",
     "               },\r\n",
     "    data=json.dumps({\r\n",
@@ -444,39 +442,21 @@
     "  \r\n",
     "autoTokenizer = AutoTokenizer.from_pretrained(\"gpt2-medium\")\r\n",
     "for eng_slogan in slogan_list:\r\n",
-    "    text = autoTokenizer.decode(eng_slogan, skip_special_tokens=True)\r\n",
-    "    slogan = text.split('\\n')[0]\r\n",
-    "    slogan = slogan.split(',')[1:]\r\n",
-    "    slogan = ', '.join(slogan)\r\n",
-    "    print(slogan)"
+    "  print('='*40)\r\n",
+    "  text = autoTokenizer.decode(eng_slogan, skip_special_tokens=True)\r\n",
+    "  slogan = text.split('\\n')[0]\r\n",
+    "  # slogan = slogan.split(',')[1:]\r\n",
+    "  # slogan = ', '.join(slogan)\r\n",
+    "  print(slogan)\r\n",
+    "  "
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "apple,\n",
-      "[18040, 11]\n",
-      " Chrome,  Firefox,  Opera,  iOS,  Android\n",
-      " Apple TV,  iPod,  iOS,  tvOS)\n",
-      " I'm not sure what's worse,  if you don't really care what the heck you think it\n",
-      " Inc. or Apple,  iOS,  OS X,  tvOS Apple Inc,  iTunes,  App Store, \n",
-      " Inc. [OJJP] A Little Bit Faster. aMongoDB [AMONGST\n",
-      " iPad,  iPhone 7 Plus,  7,  mini,  5,  iPod touch 2,  plus more.\n",
-      "Apple, Bean, Vanilla, Honeycomb, Almond, Blueberry, Moch\n",
-      "Apple, iPhone, iPad, Inkstone, Firestone iPad,  iPad2 iPad3, \n",
-      " Android). These include Android (which is very much a mobile OS),  iOS (for laptops and desk\n",
-      " et. al. In the Proceedings of the IEEE International Symposium on Wireless Communications (WSLC), \n",
-      " and I did it. And you do not want to buy more products,  because you are paying more\n",
-      "apple-video5, webkit, 3.0, 2989, iOS6 Safari 5.1\n",
-      " Mac OS X,  Windows 7 or Linux)\n",
-      " Apple Inc. -1.19% Google and the likes.\n",
-      "apple-video-2.1.5-1~beta4-6.7.2\n",
-      " a company who produce the phone,  has added a button at the bottom of the home screen to turn\n",
-      "0x00200000, 2, 7, 5, null) VBI Codec, bin/binary, \n",
-      " Nautilus) and a set of tools for getting the data to the users.\n",
-      " Apple TV 4th generation,  iPads,  iPhone 3rd generation; iPhone 4S,  iPad Mini;\n",
-      " a subsidiary of Google. In addition to Google Fiber,  Google is in talks with AT&T and\n"
+      "apple iphone\n",
+      "[18040, 220, 13323, 505]\n"
      ]
     }
    ],
